# second-brain

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
config.example/: newsletters.yaml  settings.yaml  taxonomy.yaml
src/second_brain/: __init__.py  config.py  main.py  models.py
src/second_brain/enrich/: __init__.py  web.py
src/second_brain/gmail/: client.py
src/second_brain/llm/: base.py  batch.py  claude.py  claude_batch.py  prompts.py
src/second_brain/pipeline/: base.py  batch_state.py  inbox.py  newsletter.py
src/second_brain/scaffold/: __init__.py
src/second_brain/scaffold/templates/: Book Template.md  Newsletter Template.md  Paper Template.md  Web Clipping Template.md
src/second_brain/vault/: base.py  filesystem.py  obsidian_cli.py  scanner.py  sync_state.py
templates/: book.md.j2  newsletter.md.j2  paper.md.j2
tests/: conftest.py  test_config.py  test_enrich_web.py  test_gmail_client.py  test_llm.py  test_models.py  test_pipeline_inbox.py  test_pipeline_newsletter.py  test_sync_state.py  test_vault.py
tests/fixtures/: sample_email.html  sample_inbox_note.md
tests/fixtures/sample_config/: newsletters.yaml  settings.yaml  taxonomy.yaml
